<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">goodLuck</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_dir_test">DirTestActivity</string>
    <string name="title_activity_view_pager">ActionBar显示</string>
    <string name="title_activity_notifycation">NotifycationActivity</string>
    <string name="welcome_advertisement">https://www.baidu.com</string>
    <string name="text_exit">确认退出吗</string>
    <string name="text_cancel">取消</string>
    <string name="text_sure">确定</string>
    <string name="custom_dialog_titleImageViewDescription">titleImageView</string>
    <string name="custom_dialog_contentImageViewDescription">contentImageView</string>
    <string name="popMenu1">自定义AlertDialog(更新)</string>
    <string name="popMenu2">系统退出窗口</string>
    <string name="popMenu3">系统退出窗口,设置了style(使用Dialog)</string>
    <string name="popMenu4">自定义退出弹窗(使用Dialog)</string>
    <string name="popMenu5">自定义退出弹窗(继承Dialog的类实现)</string>
    <string name="mainActivity_menu_delete">删除</string>
    <string name="viewPagerActivity_menu_google">Google+</string>
    <string name="viewPagerActivity_menu_gmail">Gmail</string>
    <string name="viewPagerActivity_menu_facebook">FaceBook</string>
    <string name="viewPagerActivity_menu_twitter">Twitter</string>
    <string name="viewPagerActivity_menu_searchView">搜索</string>
    <string name="viewPagerActivity_menu_share">测试Action Provider</string>
    <string name="MainActivity_button1">测试获取R和imei</string>
    <string name="MainActivity_button2">测试存储</string>
    <string name="MainActivity_button3">测试顶部通知</string>
    <string name="MainActivity_button4">汉字转拼音</string>
    <string name="MainActivity_button5">测试自定义dialog</string>
    <string name="MainActivity_button6">测试ListView和ViewPager</string>
    <string name="MainActivity_button7">消息通知启动另一应用</string>
    <string name="MainActivity_button8">测试侧滑菜单</string>
    <string name="MainActivity_button9">测试登录</string>
    <string name="MainActivity_button10">webView</string>
    <string name="MainActivity_button11">空</string>
    <string name="MainActivity_button12">空</string>
    <string name="MainActivity_button13">空</string>
    <string name="MainActivity_button14">空</string>
    <string name="MainActivity_button15">空</string>
    <string name="activity_login_account">账号：</string>
    <string name="activity_login_password">密码：</string>
    <string name="activity_login_getverificationCode">点击获取验证码</string>
    <string name="activity_login_verificationCodeHint">请输入验证码</string>
    <string name="activity_login_login">登录</string>
    <string name="activity_login_regist">注册</string>
    <string name="activity_login_regist_confirm">确定</string>
    <string name="activity_login_regist_cancel">取消</string>
    <string name="webview_up">↑</string>
    <string name="webview_left">←</string>
    <string name="webview_right">→</string>
    <string name="webview_down">↓</string>

    <string-array name="notifycation_main">
        <item>发送普通消息</item>
        <item>发送自定义界面的常驻消息</item>
    </string-array>
    <string-array name="welcome_textContent">
        <item>读</item>
        <item>书</item>
        <item>，</item>
        <item>博</item>
        <item>揽</item>
        <item>天</item>
        <item>下</item>
    </string-array>
    <string-array name="sideslipView_fragment2List">
        <item>插入</item>
        <item>查询</item>
        <item>查询所有数据</item>
        <item>修改</item>
        <item>删除</item>
    </string-array>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_sideslip">goodLuck</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_webView">webViewActivity</string>

</resources>
