<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- orderInCategory：显示顺序，值越小显示越前面 -->
    <item
        android:id="@+id/main_pop1"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/popMenu1"/>
    <item
        android:id="@+id/main_pop2"
        android:orderInCategory="201"
        android:showAsAction="never"
        android:title="@string/popMenu2"/>
    <item
        android:id="@+id/main_pop3"
        android:orderInCategory="202"
        android:showAsAction="never"
        android:title="@string/popMenu3"/>
    <item
        android:id="@+id/main_pop4"
        android:orderInCategory="203"
        android:showAsAction="never"
        android:title="@string/popMenu4"/>
    <item
        android:id="@+id/main_pop5"
        android:orderInCategory="204"
        android:showAsAction="never"
        android:title="@string/popMenu5"/>

</menu>