<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- 测试Action Provider，实现溢出菜单功能 -->    <item
        android:id="@+id/viewPager_action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:orderInCategory="90"
        android:title="@string/viewPagerActivity_menu_share"/>
    <!-- 测试searchView -->
    <item
        android:id="@+id/viewPager_action_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="always"
        android:orderInCategory="80"
        android:title="@string/viewPagerActivity_menu_searchView"/>
    
    <item
        android:id="@+id/viewPager_action_share_facebook"
        android:icon="@drawable/ic_social_facebook"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/viewPagerActivity_menu_facebook"/>
    <item
        android:id="@+id/viewPager_action_share_gmail"
        android:icon="@drawable/ic_social_gmail"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/viewPagerActivity_menu_gmail"/>
    <item
        android:id="@+id/viewPager_action_share_google"
        android:icon="@drawable/ic_social_googleplus"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/viewPagerActivity_menu_google"/>
    <item
        android:id="@+id/viewPager_action_share_twitter"
        android:icon="@drawable/ic_social_twitter"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/viewPagerActivity_menu_twitter"/>

</menu>