<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/viewPager_menu_facebook"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/viewPagerActivity_menu_facebook"
        android:icon="@drawable/ic_social_facebook"/>
    <item
        android:id="@+id/viewPager_menu_gmail"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/viewPagerActivity_menu_gmail"
        android:icon="@drawable/ic_social_gmail"/>
    <item
        android:id="@+id/viewPager_menu_google"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/viewPagerActivity_menu_google"
        android:icon="@drawable/ic_social_googleplus"/>
    <item
        android:id="@+id/viewPager_menu_twitter"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/viewPagerActivity_menu_twitter"
        android:icon="@drawable/ic_social_twitter"/>

</menu>
