<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popwindow_bg" >
    
    <Button
        android:id="@+id/popwindow_bt1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/popMenu1"
        android:textSize="@dimen/popwindow_button_textsize"
        android:textColor="@android:color/white"
        />
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/background_y_color1"/>
    <Button
        android:id="@+id/popwindow_bt2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/popMenu2"
        android:textSize="@dimen/popwindow_button_textsize"
        android:textColor="@android:color/white"
        />
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/background_y_color1"/>
    <Button
        android:id="@+id/popwindow_bt3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/popMenu3"
        android:textSize="@dimen/popwindow_button_textsize"
        android:textColor="@android:color/white"
        />
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/background_y_color1"/>
    <Button
        android:id="@+id/popwindow_bt4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/popMenu4"
        android:textSize="@dimen/popwindow_button_textsize"
        android:textColor="@android:color/white"
        />
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/background_y_color1"/>
    <Button
        android:id="@+id/popwindow_bt5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/popMenu5"
        android:textSize="@dimen/popwindow_button_textsize"
        android:textColor="@android:color/white"
        />

</LinearLayout>
