<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <WebView
        android:id="@+id/webview_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:id="@+id/webview_touchZone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/webview_webview"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        android:visibility="gone" />
    
    <RelativeLayout
        android:id="@+id/webview_console"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/webview_up"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_webview_controller_margin"
            android:background="#99FF80C0"
            android:gravity="center"
            android:text="@string/webview_up"
            android:textColor="@android:color/widget_edittext_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/webview_left"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#99FF80C0"
            android:gravity="center"
            android:text="@string/webview_left"
            android:textColor="@android:color/widget_edittext_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/webview_right"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#99FF80C0"
            android:gravity="center"
            android:text="@string/webview_right"
            android:textColor="@android:color/widget_edittext_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/webview_down"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_webview_controller_margin"
            android:background="#99FF80C0"
            android:gravity="center"
            android:text="@string/webview_down"
            android:textColor="@android:color/widget_edittext_dark"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>