<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/activity_login_bg"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp" >

        <LinearLayout
            android:id="@+id/loginActivity_LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/activity_login_account"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/activity_login_edittext_bg"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:minHeight="35dp"
                android:padding="2dp"
                android:paddingLeft="15dp"
                android:paddingRight="5dp"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginActivity_LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginActivity_LinearLayout1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/activity_login_password"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:password="true"
                android:background="@drawable/activity_login_edittext_bg"
                android:minHeight="35dp"
                android:padding="2dp"
                android:paddingLeft="15dp"
                android:paddingRight="5dp"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginActivity_LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginActivity_LinearLayout2"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_weight="1"
                android:text="@string/activity_login_login"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_weight="1"
                android:text="@string/activity_login_regist"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>