<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:minWidth="280dip"
    android:background="@null"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/exit_dialog_top_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_exit"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/background_y_color1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="130dp"
        android:gravity="center"
        android:background="@drawable/exit_dialog_middle_bg"
        android:orientation="horizontal" >

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/exit_GifImageView"
            android:layout_width="match_parent"
            android:minWidth="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/exit_dialog_bottom_bg"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/exit_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_weight="1"
            android:background="@drawable/exit_dialog_button1_bg"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_cancel"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/exit_sureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_weight="1"
            android:background="@drawable/exit_dialog_button2_bg"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_sure"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>